# ChangeLog for vmware overlay
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  19 Jun 2006; Mike Auty <ikelos@gentoo.org>:
  Refactored several bits of the vmware.eclass based on the inconsistent naming
  scheme used by vmware-server-console to locate it's configuration info.

  I also finished off converting vmware-server over to the vmware.eclass
  and pushed vmware-server-console over to it too.  Hopefully we're nearly there
  now...  5:)
  
  16 Jun 2006; Mike Auty <ikelos@gentoo.org>:
  Ok, just double checked/lined up the vmware-module version numbers
  with the packages building against them.
  
  16 Jun 2006; Mike Auty <ikelos@gentoo.org>:
  Just a couple quick changes.
  I modified the vmware-player-1.0.x-r5 ebuild, just a bit of clearing up.
  I also fixed a tiny typo in the vmware.eclass.

  vmware-player now seems to be a go with the new modules on ~x86 (although I've
  left it masked).

  14 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>:
  Well, I've done quite a few changes.
  
  - Ported all of the remaining code from src_install in vmware-workstation to
  vmware.eclass
  - Ported vmware-workstation 3.x and 4.x to vmware-modules and the
  vmware.eclass
  - Removed all older versions/revisions that are currently in the portage tree,
  as they're unnecessary
  - Marked the new 5.5 version of vmware-workstation as ~amd64 and ~x86 as it
  has now been tested and appears to work just fine

  13 Jun 2006; Mike Auty <ikeloes@gentoo.org>:
  Also today, I removed the last few svn:keywords that meant I had to keep
  recalculating the manifests.  Handy though they might have been, it's easier
  to do revbumps to differentiate the versions, than it is to manually keep 
  redoing those manifests and checking them back in again...
  
  13 Jun 2006; Mike Auty <ikelos@gentoo.org>:
  Added revision bumps for vmware-player-1 and vmware-workstation-5.5, to use