@@ -81,10 +81,10 @@ SHA256 56aafee80ad705e8d832f8853c36d763d37b87d1cb132a41c50eb63085ae854d files/vm
 DIST VMware-server-1.0.0-24927.tar.gz 104500783 RMD160 e8332b37022178b3d656b43f10d5cc46a6bcc068 SHA1 76b322e9c4cb18c8db1ed0f53f3646e35590f611 SHA256 4e3d447b671e7008af5f7e42df6cd2200c11f0ab85baee275418c80207e97707
 DIST vmware-any-any-update101.tar.gz 296409 RMD160 d8994b91492257d8b8e08480ab27fc307fc34095 SHA1 43714052429c1574cdf086a052859657affff0b0 SHA256 b12e3a70117ef26a85c8e01a23ea7d21b62bbc86998368114f9f7932390d2037
 DIST vmware-server-1.0.0.24927-rpath-corrected-libs.tar.bz2 73834 RMD160 7f64627b5b945e8d7dabe39c165a4b66b71fb4d3 SHA1 9d696750ca3ec92b31ca8112fd80dcd832494044 SHA256 c42299dd033187c67b45b739da66583fbd94cdcba745200b89a25ac96cd9364b
-EBUILD vmware-server-1.0.0.24927-r1.ebuild 2982 RMD160 03f6a61e072b0134ad6c43b35b18c880a07b8412 SHA1 7aeee00f1d8be222ee46234ba2b86b2f15cef4ca SHA256 be3495c273163cd0c286163e6e607adbd9a2ab8c1d27c351526bc2dd2168a808
-MD5 ed3aba5b34219fd78f90aec63de9ddb9 vmware-server-1.0.0.24927-r1.ebuild 2982
-RMD160 03f6a61e072b0134ad6c43b35b18c880a07b8412 vmware-server-1.0.0.24927-r1.ebuild 2982
-SHA256 be3495c273163cd0c286163e6e607adbd9a2ab8c1d27c351526bc2dd2168a808 vmware-server-1.0.0.24927-r1.ebuild 2982
+EBUILD vmware-server-1.0.0.24927-r1.ebuild 2987 RMD160 56e6acb30fcc060a16cd9771e694a4c5decf8ff2 SHA1 617cce6a19989bc634ff21d751f6318da05808ba SHA256 96e925c851c2a0305d6e7134a46ecbc0cdd2d0084f56aececec24826ff51dd83
+MD5 0fb145241d71cb7a1fe5c76a9eabcaf5 vmware-server-1.0.0.24927-r1.ebuild 2987
+RMD160 56e6acb30fcc060a16cd9771e694a4c5decf8ff2 vmware-server-1.0.0.24927-r1.ebuild 2987
+SHA256 96e925c851c2a0305d6e7134a46ecbc0cdd2d0084f56aececec24826ff51dd83 vmware-server-1.0.0.24927-r1.ebuild 2987
 EBUILD vmware-server-1.0.0.24927.ebuild 5475 RMD160 5274eb85306a295b789ee51ebacf4dc513382c51 SHA1 005f61b86f65f2a91b41ee492cffe60794426507 SHA256 df109e9792ced2bac9ee6d4926dbb32b4392647282299b0c5e33e23596cb0cd8
 MD5 bff92dc1848668a094e858496bd203ea vmware-server-1.0.0.24927.ebuild 5475
 RMD160 5274eb85306a295b789ee51ebacf4dc513382c51 vmware-server-1.0.0.24927.ebuild 5475
